# movies

backend/: pyproject.toml
backend/movies/: app.py  db.py  models.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: api.service.ts  app-routing.module.ts  app.module.ts
frontend/src/app/auth/: auth-service.service.ts
frontend/src/app/auth/dto/: auth-reponse.ts  auth-request.ts  register-request.ts
frontend/src/app/auth/login/: login.component.html  login.component.ts
frontend/src/app/auth/register/: register.component.html  register.component.ts
frontend/src/app/dto/: actor.ts  message.ts  movie.ts  room.ts
frontend/src/app/page/archive/: archive.component.css  archive.component.html  archive.component.ts
frontend/src/app/room/: room.component.css  room.component.html  room.component.ts
frontend/src/environments/: environment.ts
